Bug 1748632 - Fix some warnings in AudioStream.cpp. r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D135119